# LLMNodeGraph_AG

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  canvas_mockup.md  initi_spec.md  main.py  pyproject.toml  requirements.txt
.agent/workflows/: run.md  test.md
.kiro/steering/: product.md  structure.md  tech.md
core/: api.py  assembler.py  command.py  command_manager.py  error_handler.py  event_bus.py  graph.py  graph_controller.py  llm_providers.py  logging_setup.py  node.py  provider_manager.py  provider_status.py  settings_manager.py  tab_controller.py
docs/: conf.py  index.rst
examples/: agdemo.json
services/: fetch_worker.py  llm_queue_manager.py  worker.py
tests/: check_docs.py  conftest.py  manual_verify_worker.py  run_interrogate.py  test_api_integration.py  test_collision.json  test_graph_controller.py  test_id_collision.py  test_main_window_integration.py  test_merge_dirty.py  test_merge_pos.py  test_provider_logic.py  test_tab_controller.py  test_theme.py  test_theme_values.py  test_ui_components.py  test_ui_functionality.py  test_worker_async.py  verify_impl_errors.py
ui/: canvas.py  editor_tab.py  log_window.py  main_window.py  node_item.py  node_layout_manager.py  node_painter.py  node_settings_dialog.py  settings_dialog.py  theme.py  wire_item.py
